src/components/Modal/Modal.module.css
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 46, 109, 0.9);
  z-index: 1;
}

.container {
  max-height: 90vh;
  max-width: 600px;
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #fff;
  width: 600px;
  height: 888px;
  z-index: 2;
  border-radius: 16px;
  box-shadow: 0px 7px 15px 0px #1b1e2912;
}

@media (max-width: 700px) {
  .container {
    display:flex;
    max-height: 100vh;
    max-width: 100vw;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    transform: none;
    border-radius: 0;
  }
  .content{
    padding-left:20px !important;
    padding-right:20px !important;
  }
}

.header {
  height: 56px;
  justify-content: space-between;
  padding: 16px 24px;
  border-bottom: #e6e6e6 solid 1px;
  display: flex;
  align-items: center;
}

.headerTitle {
  font-family: var(--Font-Secondary);
  font-size: 18px;
  font-weight: 600;
  line-height: 22px;
  text-align: left;
  color: var(--Brand-Primary-SBA-Blue);
  order: 1;
}

.headerClose {
  color: var(--SBA-CRM-text-text-light);
  font-family: var(--Font-Secondary);
  font-size: 16px;
  font-weight: 400;
  line-height: 18px;
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 5px;
  order: 2;
}

.content {
  display:flex;
  flex-direction: column;
  justify-content:start;
  align-items:center;
  overflow-y: auto;
  scrollbar-width:none;
  padding-top:24px;
  padding-left:48px;
  padding-right:48px;
  gap: 16px;
  text-align: center;
  margin-bottom:92px;
}

.contentTitle {
  font-family: var(--Font-Primary);
  font-size: 32px;
  font-weight: 400;
  line-height: 38px;
  text-align: center;
  word-wrap: break-word;
  color: var(--Brand-Primary-SBA-Blue);
}

.contentMessage {
  font-family: var(--Font-Primary);
  font-size: 22px;
  font-weight: 400;
  line-height: 26px;
  text-align: center;
  color: var(--Brand-Primary-SBA-Blue);
}

.footer {
  min-height:92px;
  width:100%;
  padding: 24px 16px;
  border-bottom-left-radius:16px;
  border-bottom-right-radius:16px;
  position:absolute;
  bottom:0;
  border-top: #dcdee0 solid 1px;
  gap:16px;
  display: flex;
  justify-content: center;
  background: #FFF;
  box-shadow: 0 -5px 20px 0 rgba(0, 46, 109, 0.10);
}

.stepIndicatorContainer {
  padding:10px;
  width: 100%;
  background: white;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.customStepIndicator {
  width:100%;
  margin-bottom:0px;
}

.usaStepIndicatorSegments {
  width:100%;
  align-self: center;
  justify-content: center;
  align-items: center;
}

.usa-step-indicator__segment--current::after {
  background-color: #007dbc;
}

.usa-step-indicator__segment--current {
  max-width:none;
}

.usa-step-indicator__segment--complete {
  max-width:none;
}

.usa-step-indicator__segment--complete::after {
  background-color: #000441;
}

.usa-step-indicator__segment--incomplete::after {
  background-color: #e6e6e6;
}

.usa-step-indicator__segment--incomplete {
  max-width:none;
}

.imageSize {
  width: 100px;
  height: 100px;
  object-fit: cover;
}

